--- a/socialtech/index.html
+++ b/socialtech/index.html
@@ -20,5 +20,18 @@
         <a href="index.html#contact">CONTACT</a>
       </nav>
     </header>
+
+    <main> <!-- mainタグ：中身がメインコンテンツであることを表す articleタグ：中身が記事であることを表す -->
+      <article>
+        <section id="main-visual"> <!--メインビジュアルを表示する場所をsectionタグで確保する-->
+          <div id="main-message"><!--divタグ　青色の背景になる-->
+            <h1>WORLD PEACE</h1>
+            <p>IT教育で世界平和を実現する</p>
+          </div>
+          <img src="images/index/index-main.png" alt="PCの周りに集まる多国籍の仲間たち">
+        </section>
+
+      </article>
+    </main>
   </body>
 </html>
